# coordgenlibs

./: .travis.yml  CMakeLists.txt  CoordgenConfig.hpp  CoordgenFragmentBuilder.cpp  CoordgenFragmentBuilder.h  CoordgenFragmenter.cpp  CoordgenFragmenter.h  CoordgenMacrocycleBuilder.cpp  CoordgenMacrocycleBuilder.h  CoordgenMinimizer.cpp  CoordgenMinimizer.h  CoordgenTemplates.cpp  CoordgenTemplates.h  README.md  appveyor.yml  azure-pipelines.yml  coordgen_standalone.pro  sketcherMaeReading.h  sketcherMinimizer.cpp  sketcherMinimizer.h  sketcherMinimizerAtom.cpp  sketcherMinimizerAtom.h  sketcherMinimizerBendInteraction.h  sketcherMinimizerBond.cpp  sketcherMinimizerBond.h  sketcherMinimizerClashInteraction.h  sketcherMinimizerConstraintInteraction.h  sketcherMinimizerEZConstrainInteraction.h  sketcherMinimizerFragment.cpp  sketcherMinimizerFragment.h  sketcherMinimizerInteraction.h  sketcherMinimizerMarchingSquares.cpp  sketcherMinimizerMarchingSquares.h  sketcherMinimizerMaths.h  sketcherMinimizerMolecule.cpp  sketcherMinimizerMolecule.h  sketcherMinimizerResidue.cpp  sketcherMinimizerResidue.h  sketcherMinimizerResidueInteraction.cpp  sketcherMinimizerResidueInteraction.h  (+4 more)
.azure-pipelines/: linux_build.yml  mac_build.yml  vs_build.yml
Debug/coordgen_standalone.app/Contents/: Info.plist
cmake/: CoordgenUtils.cmake  Findmaeparser.cmake
coordgen_standalone.build/Debug/Qt Preprocess.build/: Script-5E618435888B9D49F8540165.sh  Script-7EF0942E79C014DCEC8976BC.sh  dgph~
coordgen_standalone.build/Debug/coordgen_standalone.build/: coordgen_standalone.hmap  dgph  dgph~
coordgen_standalone.build/Debug/coordgen_standalone.build/Objects-normal/x86_64/: CMakeCCompilerId.d  CMakeCXXCompilerId.d  CoordgenFragmentBuilder.d  CoordgenFragmenter.d  CoordgenMacrocycleBuilder.d  CoordgenMinimizer.d  coordgen_standalone.LinkFileList  feature_tests-6BFC9F0D3309F0B2.d  feature_tests-FA058CAFBC847189.d  sketcherMinimizer.d  sketcherMinimizer.dia  sketcherMinimizerAtom.d  sketcherMinimizerAtom.dia  sketcherMinimizerBond.d  sketcherMinimizerFragment.d  sketcherMinimizerMarchingSquares.d  sketcherMinimizerMolecule.d  sketcherMinimizerResidue.d  sketcherMinimizerResidueInteraction.d  sketcherMinimizerRing.d
coordgen_standalone.xcodeproj/: project.pbxproj  qt_makeqmake.mak  qt_preprocess.mak
coordgen_standalone.xcodeproj/project.xcworkspace/xcuserdata/nicola.xcuserdatad/: UserInterfaceState.xcuserstate
coordgen_standalone.xcodeproj/xcshareddata/xcschemes/: coordgen_standalone.xcscheme
coordgen_standalone.xcodeproj/xcuserdata/nicola.xcuserdatad/xcschemes/: xcschememanagement.plist
example/: example.cpp
example_dir/: CMakeLists.txt  example.cpp
test/: CMakeLists.txt  coordgenBasicSMILES.h  test_coordgen.cpp  test_smilesparser.cpp
xcshareddata/xcschemes/: coordgen_standalone.xcscheme
